--- a/src/app/home/templates/home.tpl.html
+++ b/src/app/home/templates/home.tpl.html
@@ -35,7 +35,7 @@
 										<line x1="17" y1="55.2" x2="12.2" y2="62.2"></line>
 									</svg>
 								</span>
-								9 AM-10 AM<span class="events-cost">$210.00</span>
+								{{eventInfo.startTime}} - {{eventInfo.endTime}}<span class="events-cost">$210.00</span>
 							</div>
 					
 					</div>
