--- a/src/app/buildOrder/templates/buildOrder.orderSummary.tpl.html
+++ b/src/app/buildOrder/templates/buildOrder.orderSummary.tpl.html
@@ -1,5 +1,5 @@
 <ui-view>
-	<div id="order-summary" class="oms_main_container buildOrder-order-summary" ng-show="showOrdersummary" cg-busy="buildordersummary.OrderSummaryLoader">
+	<div id="order-summary" class="oms_main_container buildOrder-order-summary" ng-show="showOrdersummary">
 		<div class="buildOrder-order-summary-content">
 			<div class="order-info">
 				<h1>Active Order Summary</h1>
