--- a/src/app/buildOrder/templates/buildOrder.pdp.tpl.html
+++ b/src/app/buildOrder/templates/buildOrder.pdp.tpl.html
@@ -12,7 +12,7 @@
 							<path d="M0.7,18.3l7.8-7.8L0.7,2.7L3,0.3l10.2,10.2L3,20.7L0.7,18.3z"/>
 						</g>
 					</svg>
-					Back to Search Results
+					Back
 				</a>
 				<a ng-click="gotoplp()" ng-if="buildOrder.searchType=='Products'">
 					<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -24,7 +24,7 @@
 							<path d="M0.7,18.3l7.8-7.8L0.7,2.7L3,0.3l10.2,10.2L3,20.7L0.7,18.3z"/>
 						</g>
 					</svg>
-					Back to Search Results
+					Back 
 				</a>
 			</h1>
 			<div class="buildOrder-pdp-content row">
@@ -323,15 +323,66 @@
 						</div>
 					</div>
 				</div>
+				<div class="row faster-delivery-content">
+                                    <div class="assembly">
+                                        <h5>Assembly:</h5>
+                                        <div class="radio-inline">
+                                           <input type="radio" id="assembled" name="assembly" value="Assembled">
+                                           <label for="assembled">
+                                           <span class="radioOutline"><span class="radioInside"></span></span>
+                                           <span class="label-name">Assembled</span>
+                                           </label>
+                                        </div>
+                                        <div class="radio-inline">
+                                           <input type="radio" id="notAssembled" name="assembly" value="Not Assembled">
+                                           <label for="notAssembled">
+                                           <span class="radioOutline"><span class="radioInside"></span></span>
+                                           <span class="label-name">Not Assembled</span>
+                                           </label>
+                                        </div>
+                                        <p class="note"><span>Note:&nbsp;</span>Assembly charges may be applicable</p>
+                                    </div>
+                                    <div class="placement">
+                                        <h5>Placement:</h5>
+                                        <div class="radio-inline">
+                                           <input type="radio" id="placed" name="placement" value="Placed">
+                                           <label for="placed">
+                                           <span class="radioOutline"><span class="radioInside"></span></span>
+                                           <span class="label-name">Placed</span>
+                                           </label>
+                                        </div>
+                                        <div class="radio-inline">
+                                           <input type="radio" id="notPlaced" name="placement"value="Not Placed">
+                                           <label for="notPlaced">
+                                           <span class="radioOutline"><span class="radioInside"></span></span>
+                                           <span class="label-name">Not Placed</span>
+                                           </label>
+                                        </div>
+                                        <br>
+                                        <textarea placeholder="Placement Instruction" rows="4" cols="10"></textarea>
+                                        <p class="note"><span>Note:&nbsp;</span>Placement Charges Will be applicable</p>
+                                    </div>
+                                    <!-- <div class="fastDelivery" ng-show="pdp.Faster"> -->
+                                        <!-- <div class="fastDelivery">
+                                         
+                                         <div class="Checkbox">
+                                            <input type="checkbox" name="deliverytype" id="fastDelivery" ng-model="pdp.DeliveryType" value="Mixed"  ng-true-value="'Mixed'" ng-false-value="'NO'" />
+                                           
+                                            <div class="Checkbox-visible"></div>
+                                         </div>
+                                         <label class="fastDelivery" for="fastDelivery">Select Faster Delivery</label>
+                                         <p class="note"><span>Note:&nbsp;</span>Faster Delivery Charges Will be applicable</p>
+                                    </div> -->
+                                </div>
 				<button class="addCart" ng-if="buildOrder.hidePdpblock">REGISTER</button>
 				<button class="addCart" ng-click="AddtoCart(buildOrder.selectedProductId, buildOrder.selectedProductImg)" ng-if="!buildOrder.hidePdpblock">ADD TO CART</button>
 				</div>
 				<div class="key-product col-xs-12 p0">
 					<h3>Key Product Info:</h3>
 					<p class="row">
-						<div ng-repeat="attribute in buildOrder.selectedKey">
-							<span class="col-xs-1"><img src="{{attribute.url}}"></span>
-							<label for="" class="col-xs-2">{{attribute.attribute}}</label>
+						<div class="key-prod-info" ng-repeat="attribute in buildOrder.selectedKey">
+							<span><img src="{{attribute.url}}"></span>
+							<label for="" class="">{{attribute.attribute}}</label>
 						</div>
 					</p>
 				</div>
@@ -431,7 +482,7 @@
 						<path d="M0.7,18.3l7.8-7.8L0.7,2.7L3,0.3l10.2,10.2L3,20.7L0.7,18.3z"/>
 					</g>
 				</svg>
-				Back to Order
+				Back 
 			</a>
 			</h1>
 			<div class="owl-theme" id="pdpCarouselView">
@@ -541,7 +592,19 @@
 	My details goes here.......
 </modal>
 <modal title="View Care Guide" visible="buildOrderPDP.viewCareGuide" id="careGuide" class="modal-pop-up view-care-guide" ng-init="buildOrderPDP.showArticle=false;">
-	<p ng-if="buildOrderPDP.showArticle" ng-click="buildOrderPDP.showArticle=!buildOrderPDP.showArticle">BACK</p>
+	<div ng-if="buildOrderPDP.showArticle" ng-click="buildOrderPDP.showArticle=!buildOrderPDP.showArticle" class="page_header_back">
+	<a>
+		<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 14 21" style="enable-background:new 0 0 14 21;" xml:space="preserve">
+			<style type="text/css">
+				.st0{fill:#8B8E96;}
+			</style>
+			<g>
+				<path d="M0.7,18.3l7.8-7.8L0.7,2.7L3,0.3l10.2,10.2L3,20.7L0.7,18.3z"></path>
+			</g>
+		</svg>
+		Back
+	</a>
+</div>
 	<ul ng-if="!buildOrderPDP.showArticle">
 		<li ng-repeat="articles in buildOrder.articles">
 			<div ng-click="buildOrderPDP.getArticle(articles.contentUrl);buildOrderPDP.showArticle=!buildOrderPDP.showArticle">
