--- a/src/app/buildOrder/templates/buildOrder.right.tpl.html
+++ b/src/app/buildOrder/templates/buildOrder.right.tpl.html
@@ -1,4 +1,4 @@
-		<div class="oms-plp-right" id="oms-plp-right" ng-show="hideActiveSummary" cg-busy="buildOrderRight.ActiveOrderCartLoader">
+		<div class="oms-plp-right" id="oms-plp-right" ng-show="hideActiveSummary">
             <h1>ACTIVE ORDER</h1>
 			<div ng-repeat="line in buildOrderRight.lineItemProducts track by line">
 				<div class="pdt_name">
