--- a/src/app/buildOrder/less/buildOrder.less
+++ b/src/app/buildOrder/less/buildOrder.less
@@ -226,7 +226,7 @@ input.error {
 				.helvetica-bold;
 				font-size: 12.5px ;
 				color: @primary-dark-color;
-				border: 2px solid @primary-dark-color;
+				border:1px solid @primary-dark-color;
 				background-color: @color0;
 				padding: 6px 10px 3px;
 				border-radius: 7px;
@@ -763,6 +763,23 @@ input.error {
 							margin-bottom: 0;
 						}
 					}
+					.key-prod-info{
+						    display: inline-block;
+    						margin-left:6%;
+    						span{
+    							text-align: left;
+    							margin-right:15px;
+    							img{
+    								width:50px;
+    							}
+    						}
+    						label{
+								font-family: "Helvetica-Bold";
+								font-size:13px;
+								text-transform: capitalize;
+    						}					
+
+					}
 				}
 				.pdp-description {
 					padding:0;
@@ -1068,6 +1085,7 @@ input.error {
 				font-size: 21px ;
 				color: @primary-dark-color;
 				margin-top:10px;
+				text-transform: capitalize;
 			}
 			.order-header {
 				background: #fff;
@@ -3027,6 +3045,32 @@ input.error {
 /*View Guide Modal */
 
 .view-care-guide{
+	.modal-body{
+		    	overflow-y: hidden;
+		    	
+			}
+			.page_header_back{
+					font-family: "Helvetica-regular";
+				    font-size: 13px;
+				    color: #54565d;
+				    margin: 10px 0;
+				    a{
+				    	color: #54565d;
+					    cursor: pointer;
+					    text-decoration: none;
+					    &:hover{
+					        color: #a77bca;
+					    }
+					    svg{
+					    width: 10px;
+					    height: 9px;
+					    color: rgb(84, 86, 93);
+					    display: inline-block;
+					    transform: rotate(180deg);
+					    }
+				    }
+			}
+			
 	ul{
 		li{
 		    padding: 5px;
@@ -3049,4 +3093,30 @@ input.error {
 
 	
 	}
+	.right-content{
+		width:100%;
+		.content-body-block{
+		       text-align: justify;
+			     font-family: "Helvetica-regular";
+			     font-size:13px;
+			     padding-right:14px;
+			     table{
+			     	ul{
+			     	 li{
+			     	 	&:nth-child(even){
+		    			background: transparent;
+		    			}
+		    			margin:0px;
+		    			padding:0px;
+			     	 }
+			     	}
+			     }
+		}
+	}
+	.articlePDP{
+		height:300px;
+		overflow-y: auto;
+	}
 }
+
+
