--- a/src/app/base/less/base.less
+++ b/src/app/base/less/base.less
@@ -570,6 +570,29 @@ input[type=number]::-webkit-outer-spin-button {
     			padding: 11px 16px 8px 16px !important;
 			 }
 		}
+		.order-grid .ui-grid-render-container .ui-grid-viewport .ui-grid-canvas .ui-grid-row:nth-child(odd) {
+		    border-top: 1px solid #eaeaea;
+		    background-color: #fff;
+		    margin: 0;
+		}
+		.order-grid .ui-grid-render-container .ui-grid-viewport .ui-grid-canvas .ui-grid-row:nth-child(odd):first-child{
+			border-top:none;
+			margin:-1px;
+		}
+		.order-grid .ui-grid-render-container .ui-grid-viewport .ui-grid-canvas .ui-grid-row:nth-child(even) {
+		    border-top: 1px solid #eaeaea;
+		    background-color: #f7f8fa;
+		    margin: 0;
+		}
+		.order-grid .ui-grid-render-container-body .ui-grid-viewport .ui-grid-canvas .ui-grid-row:nth-child(odd) .ui-grid-cell{
+		  border-bottom: none;
+		  width: 14.2% !important;
+		  /*max-width: 14.2% !important;*/
+		}
+		.order-grid .ui-grid-render-container .ui-grid-viewport .ui-grid-canvas .ui-grid-row:hover {
+		    background-color: #e4e6ea;
+		    border-right-color: #fff;
+		}
 	}
 	.saved_order {
 	height:auto;
