--- a/src/app/buildOrder/less/buildOrder.less
+++ b/src/app/buildOrder/less/buildOrder.less
@@ -3118,5 +3118,15 @@ input.error {
 		overflow-y: auto;
 	}
 }
-
-
+/*Sukhchand*/
+.upselloverlay {
+	position: absolute;
+    width: 100%;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: #000;
+    z-index: 9;
+    opacity: 0.2;
+}
