--- a/src/app/buildOrder/templates/buildOrder.top.tpl.html
+++ b/src/app/buildOrder/templates/buildOrder.top.tpl.html
@@ -31,7 +31,7 @@
 							<path d="M11.9,88.8h-29.5l7.4,7.5l-2.9,2.9l-12.5-12.5l12.5-12.5l2.9,2.9l-7.4,7.5h29.5V88.8z"/>
 						</g>
 					</svg>
-				</span> Back to order</p>
+				</span> Back </p>
             </div>
 			<div class="buildordersummaryheader" ng-show="orderDetails">	
                 <p ng-click="backTocreate()">
@@ -44,7 +44,7 @@
 							<path d="M11.9,88.8h-29.5l7.4,7.5l-2.9,2.9l-12.5-12.5l12.5-12.5l2.9,2.9l-7.4,7.5h29.5V88.8z"/>
 						</g>
 					</svg>
-				</span>Back to create</p>
+				</span>Back</p>
             </div>
         </div>
     </div>
