--- a/src/app/custInfo/less/custInfo.less
+++ b/src/app/custInfo/less/custInfo.less
@@ -418,6 +418,7 @@ input[type="number"],input[type="text"],input[type="email"],textarea,input[type=
                         background-position: right center;
                         background-size: 35px 11px;
                         cursor: pointer;
+                        background-position: right center;
                         &.open{
                              background-image: url(../../assets/images/button-up.svg);
                         }
