--- a/src/app/custInfo/templates/custInfo.tpl.html
+++ b/src/app/custInfo/templates/custInfo.tpl.html
@@ -94,7 +94,11 @@
 				</div>
 			</div>
 			<div class="subscription col-xs-12 col-sm-12 col-md-12 col-lg-12">
+				<div class="sub-header">
 				<h1>SUBSCRIPTIONS</h1>
+				<button ng-click="custInfo.updateSubscription()" class="save">Save</button>
+				</div>
+				<div class="sud-del">
 				<table>
 					<tr>
 						<th>On</th>
@@ -119,7 +123,7 @@
 						</td>
 					</tr>
 				</table>
-				<button ng-click="custInfo.updateSubscription()" class="save">Save</button>
+				</div>
 			</div>	
 				
 			</div>
