--- a/src/app/orderHistory/less/orderHistory.less
+++ b/src/app/orderHistory/less/orderHistory.less
@@ -40,6 +40,7 @@
 				.ui-grid-canvas .ui-grid-row .ui-grid-cell:last-child{
 					background-color:@color20;
 					.background-fade;
+					float:right;
 					&:hover{
 						background-color:@primary-dark-color;
 						button{
@@ -49,6 +50,10 @@
 					button{
 						background-color:transparent;
 					}
+				}
+				.ui-grid-canvas .ui-grid-row .ui-grid-cell{
+					    border-left: 1px solid #000;
+    					border-right: none;
 				}
 			}
 		}
