--- a/src/app/buildOrder/less/buildOrder.less
+++ b/src/app/buildOrder/less/buildOrder.less
@@ -909,7 +909,7 @@ input.error {
 			position: absolute;
 			bottom: 0;
 			width: 100%;
-			z-index:2;
+			z-index:10;
 			.nav.nav-pills.nav-stacked {
 				padding-left:2%;
 				li {
@@ -2631,6 +2631,7 @@ input.error {
 						.helvetica-regular;
 					  	height:300px;
 					  	overflow-y:auto;
+					  	margin-bottom: 50px;
 					.panel-group .panel{
 					 margin-bottom:10px !important;
 					}
