--- a/src/app/custInfo/templates/custInfo.tpl.html
+++ b/src/app/custInfo/templates/custInfo.tpl.html
@@ -133,7 +133,7 @@
 			<h1>PURPLE PERKS</h1>
 			<div>
 				<div class="card-img">
-					<img src="../assets/images/flowers.jpg">
+					<img src="../assets/images/purple.png">
 				</div>
 				<div class="card-content">
 					<h2>MEMBER SINCE: <span>{{custInfo.spendingAcc.purple.StartDate | date:'yyyy'}}</span></h2>
