--- a/src/app/orderHistory/less/orderHistory.less
+++ b/src/app/orderHistory/less/orderHistory.less
@@ -52,7 +52,7 @@
 					}
 				}
 				.ui-grid-canvas .ui-grid-row .ui-grid-cell{
-					    border-left: 1px solid #000;
+					    border-left: 1px solid #ccc;
     					border-right: none;
 				}
 			}
