--- a/src/app/base/less/base.less
+++ b/src/app/base/less/base.less
@@ -870,7 +870,6 @@ input[type=number]::-webkit-outer-spin-button {
 		svg{
 			width:10px;
 			height:10px;
-			fill:blue;
 		}
 	}
 	.searchelement{
@@ -907,6 +906,18 @@ input[type=number]::-webkit-outer-spin-button {
 		}
 		svg{
 			    margin-right: 8px;
+			&.cs1{
+				fill:#8597fd;
+			}
+			&.cs4{
+				fill:#ffdf8e;
+			}
+			&.cs3{
+				fill:#f28a89;
+			}
+			&.cs2{
+				fill:#a3ed98;
+			}
 		}
 		.recepient-order{
 			p{
