--- a/src/app/addressBook/templates/addressBook.tpl.html
+++ b/src/app/addressBook/templates/addressBook.tpl.html
@@ -44,7 +44,7 @@
 						</div>
 					</div>
 					<div class="addr-top">
-						<p>Address<span class="star">*</span></p>
+						<p>Address 1<span class="star">*</span></p>
 						<input type="text"  ng-model="addr.Street1" ng-blur="addressBook.getLocation()" autocomplete="off" required/>
 					</div>
 					<div class="addr-top">
