--- a/src/app/custInfo/less/custInfo.less
+++ b/src/app/custInfo/less/custInfo.less
@@ -370,13 +370,15 @@ input[type="number"],input[type="text"],input[type="email"],textarea,input[type=
 }
 .change-pwd.modal-pop-up{
 	.modal-dialog{
-		height: 290px;
-		margin-top:-145px;
 		.form-group{
 			margin-bottom:10px;
 			padding:0;
 			input{
 				padding:0;
+			}
+			.form-control.dropdown{
+				background-repeat: no-repeat;
+				background-position: right center;
 			}
 			#security-select2,input{
 			    -webkit-appearance: none;
