--- a/src/app/orderHistory/less/orderHistory.less
+++ b/src/app/orderHistory/less/orderHistory.less
@@ -51,9 +51,22 @@
 						background-color:transparent;
 					}
 				}
+				.ui-grid-canvas .ui-grid-row .ui-grid-cell:first-child {
+					.data_cell{
+						text-decoration: underline;
+						text-decoration-color:@primary-dark-color;
+					}
+					&:hover .data_cell{
+						color:@primary-dark-color;
+					}
+				}
 				.ui-grid-canvas .ui-grid-row .ui-grid-cell{
 					    border-left: 1px solid #ccc;
     					border-right: none;
+						height:40px;
+				}
+				.ui-grid-canvas .ui-grid-row{
+					background-color:@color20;
 				}
 			}
 		}
