--- a/src/app/home/less/home.less
+++ b/src/app/home/less/home.less
@@ -63,7 +63,8 @@
 					display: none;
 				}
 				.ui-grid-canvas {
-					overflow: auto !important;
+					overflow-x:hidden !important;
+					overflow-y:auto !important;
 					width:100%;
 					height:100%;
 					.ui-grid-row:nth-child(even) .ui-grid-cell,
